# argoverse-api

./: .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  =1.4.0  Argoverse-Terms_of_Use.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  argo_win64_setup.yml  environment.yaml  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.conda/: build.sh  conda_build_config.yaml  environment.yaml  environment.yml
argoverse/: __init__.py  sensor_dataset_config.py
conda/: environment.yml  install.sh
demo_usage/: 3DTracking_competition_tutorial.ipynb  argoverse_depth_map_tutorial.ipynb  argoverse_forecasting_tutorial.ipynb  argoverse_ipm_tutorial.html  argoverse_ipm_tutorial.ipynb  argoverse_monocular_depth_map_tutorial.ipynb  argoverse_stereo_tutorial.ipynb  argoverse_tracking_tutorial.ipynb  competition_forecasting_tutorial.ipynb  competition_stereo_tutorial.ipynb  competition_tracking_tutorial.ipynb  convert_tracking_dataset_to_forecasting.py  cuboids_to_bboxes.py  forecasting_competition_tutorial.ipynb  monocular_depth_dataset_tutorial.ipynb  visualize_30hz_benchmark_data_on_map.py  visualize_ground_lidar_points.py
docs/: CONTRIBUTING.html  LICENSE.html  argoverse.data_loading.html  argoverse.evaluation.html  argoverse.html  argoverse.map_representation.html  argoverse.utils.html  argoverse.visualization.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: sensor_dataset.py
integration_tests/: README.md  __init__.py  conftest.py  test_eval_forecasting.py  test_map_api.py  test_mayavi_utils.py  test_plane_visualization_utils.py  test_tracker_eval.py
sphinx/: conf.py
test_data/: json_save_test_file.json
tests/: __init__.py  conftest.py  test_argoverse_forecasting_loader.py  test_argoverse_stereo_loader.py  test_argoverse_tracking_loader.py  test_bfs.py  test_centerline_utils.py  test_competition_util.py  test_cuboid_interior.py  test_cv2_plotting_utils.py  test_datetime_utils_unit.py  test_dilate_utils_unit.py  test_eval_detection.py  test_eval_forecasting.py  test_eval_stereo.py  test_eval_tracking.py  test_ffmpeg_utils_unit.py  test_frame_label_accumulator.py  test_frustum_clipping.py  test_geometry.py  test_grid_interpolation.py  test_interpolate.py  test_json_utils.py  test_manhattan_search.py  test_map_api_v2.py  test_mask_utils.py  test_mayavi_utils_when_missing.py  test_mesh_grid.py  test_metric_time.py  test_mpl_plotting_utils.py  test_mpl_point_cloud_vis.py  test_pkl_utils.py  test_ply_loader.py  test_polyline_density.py  test_se2.py  test_se3.py  test_sensor_dataset_config.py  test_sim2.py  test_stereo_dataloader.py  (+8 more)
(+243 files in other folders)
