[metadata]
author = Argo AI
author_email = argoverse-api@argo.ai
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
description_file = README.md
keywords =
    self-driving-car
    dataset-tools
license = MIT
name = argoverse
url = https://www.argoverse.org
version = attr: argoverse.__version__

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas

[flake8]
enable_extensions = G
ignore = E203,E704,E711,E722,E741,W291,W293,W391,W503,F821,F401,F811,F841,P101,G004,G002,I201,I100,I101
max_line_length = 120