[metadata]
author = Argo AI
author_email = argoverse-api@argo.ai
description_file = README.md
license = MIT
name = argoverse
url = https://www.argoverse.org
version = attr: argoverse.__version__

[options]
zip_safe = False
include_package_data = True
install_requires =
    pandas
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[flake8]
enable_extensions = G
ignore = E203,E704,E711,E722,E741,W291,W293,W391,W503,F821,F401,F811,F841,P101,G004,G002,I201,I100,I101
max_line_length = 120